--- a/package.json
+++ b/package.json
@@ -30,10 +30,16 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@solana/web3.js": "^1.98.4",
+    "dayjs": "^1.11.19",
     "ethers": "^6.15.0",
     "mongoose": "^8.19.3",
     "nestjs-seeder": "^0.3.2",
+    "p-defer": "^4.0.1",
+    "p-retry": "^7.1.0",
     "passport-custom": "^1.1.1",
+    "puppeteer": "^24.29.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -43,6 +49,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/bn.js": "^5.2.0",
     "@types/bs58": "^4.0.4",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
@@ -52,9 +59,12 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "i": "^0.3.7",
     "jest": "^30.0.0",
+    "npm": "^11.6.2",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
+    "superjson": "^2.2.5",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
