--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^5.1.1",
+    "@as-integrations/express5": "^1.1.2",
     "@mysten/sui": "^1.44.0",
+    "@nest-lab/throttler-storage-redis": "^1.1.0",
+    "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -29,9 +32,13 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/throttler": "^6.4.0",
     "@solana/web3.js": "^1.98.4",
+    "class-validator": "^0.14.2",
     "dayjs": "^1.11.19",
     "ethers": "^6.15.0",
+    "graphql-type-json": "^0.3.2",
+    "ioredis": "^5.8.2",
     "mongoose": "^8.19.3",
     "nestjs-seeder": "^0.3.2",
     "p-defer": "^4.0.1",
