--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@aptos-labs/ts-sdk": "^5.1.1",
     "@as-integrations/express5": "^1.1.2",
     "@colyseus/schema": "^3.0.68",
+    "@keyv/redis": "^5.1.4",
     "@mysten/sui": "^1.44.0",
     "@nest-lab/throttler-storage-redis": "^1.1.0",
     "@nestjs/apollo": "^13.2.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
@@ -36,6 +39,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/throttler": "^6.4.0",
     "@solana/web3.js": "^1.98.4",
+    "cache-manager": "^7.2.4",
+    "cacheable": "^2.1.1",
     "class-validator": "^0.14.2",
     "colyseus": "^0.16.5",
     "colyseus.js": "^0.16.22",
@@ -43,7 +48,9 @@
     "ethers": "^6.15.0",
     "graphql-type-json": "^0.3.2",
     "ioredis": "^5.8.2",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.19.3",
+    "nest-winston": "^1.10.2",
     "nestjs-seeder": "^0.3.2",
     "p-defer": "^4.0.1",
     "p-retry": "^7.1.0",
@@ -51,8 +58,11 @@
     "puppeteer": "^24.29.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "redis": "^5.9.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.18.3",
+    "winston-loki": "^6.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
