--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "colyseus": "^0.16.5",
     "colyseus.js": "^0.16.22",
     "dayjs": "^1.11.19",
+    "decimal.js": "^10.6.0",
     "ethers": "^6.15.0",
     "graphql-type-json": "^0.3.2",
     "ioredis": "^5.8.2",
