--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/throttler": "^6.4.0",
+    "@sentry/nestjs": "^10.26.0",
+    "@sentry/profiling-node": "^10.26.0",
     "@solana/web3.js": "^1.98.4",
     "cache-manager": "^7.2.4",
     "cacheable": "^2.1.1",
