feat: add GraphQL error handling with custom exceptions and Sentry integration

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/throttler": "^6.4.0",
     "@sentry/nestjs": "^10.26.0",
+    "@sentry/opentelemetry": "^10.26.0",
     "@sentry/profiling-node": "^10.26.0",
     "@solana/web3.js": "^1.98.4",
     "cache-manager": "^7.2.4",
