--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@sentry/opentelemetry": "^10.26.0",
     "@sentry/profiling-node": "^10.26.0",
     "@solana/web3.js": "^1.98.4",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
     "cache-manager": "^7.2.4",
     "cacheable": "^2.1.1",
     "class-validator": "^0.14.2",
