feat: integrate Colyseus playground and update package dependencies; refactor start scripts for improved clarity

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "name": "Nomas Colyseus Debug",
             "runtimeExecutable": "npm",
-            "runtimeArgs": ["run", "start:colyseus:debug"],
+            "runtimeArgs": ["run", "start:debug nomas-colyseus"],
             "autoAttachChildProcesses": true,
             "restart": true,
             "sourceMaps": true,
