--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "start": "nest start",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
-        "start:colyseus:dev": "nest start nomas-colyseus --watch",
-        "start:colyseus:debug": "nest start nomas-colyseus --debug --watch",
+        "start:dev nomas-colyseus": "nest start nomas-colyseus --watch",
+        "start:debug nomas-colyseus": "nest start nomas-colyseus --debug --watch",
         "start:prod": "node dist/apps/nomas-server/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
@@ -25,6 +25,7 @@
         "@aptos-labs/ts-sdk": "^5.1.1",
         "@as-integrations/express5": "^1.1.2",
         "@colyseus/monitor": "^0.16.7",
+        "@colyseus/playground": "^0.16.4",
         "@colyseus/schema": "^3.0.68",
         "@keyv/redis": "^5.1.4",
         "@mysten/sui": "^1.44.0",
