--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@sentry/opentelemetry": "^10.26.0",
         "@sentry/profiling-node": "^10.26.0",
         "@solana/web3.js": "^1.98.4",
+        "@types/passport-jwt": "^4.0.1",
         "@willsoto/nestjs-prometheus": "^6.0.2",
         "cache-manager": "^7.2.4",
         "cacheable": "^2.1.1",
@@ -64,6 +65,7 @@
         "p-defer": "^4.0.1",
         "p-retry": "^7.1.0",
         "passport-custom": "^1.1.1",
+        "passport-jwt": "^4.0.1",
         "puppeteer": "^24.29.1",
         "puppeteer-extra": "^3.3.6",
         "puppeteer-extra-plugin-stealth": "^2.11.2",
