--- a/package.json
+++ b/package.json
@@ -1,129 +1,131 @@
 {
-    "name": "nomas-server",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
-    "private": true,
-    "license": "UNLICENSED",
-    "scripts": {
-        "build": "nest build",
-        "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
-        "start:dev nomas-colyseus": "nest start nomas-colyseus --watch",
-        "start:debug nomas-colyseus": "nest start nomas-colyseus --debug --watch",
-        "start:prod": "node dist/apps/nomas-server/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./apps/nomas-server/test/jest-e2e.json"
+  "name": "nomas-server",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
+  "scripts": {
+    "build": "nest build",
+    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:dev nomas-colyseus": "nest start nomas-colyseus --watch",
+    "start:debug nomas-colyseus": "nest start nomas-colyseus --debug --watch",
+    "start:prod": "node dist/apps/nomas-server/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./apps/nomas-server/test/jest-e2e.json"
+  },
+  "dependencies": {
+    "@aptos-labs/ts-sdk": "^5.1.1",
+    "@as-integrations/express5": "^1.1.2",
+    "@colyseus/monitor": "^0.16.7",
+    "@colyseus/playground": "^0.16.4",
+    "@colyseus/schema": "^3.0.68",
+    "@keyv/redis": "^5.1.4",
+    "@mysten/sui": "^1.44.0",
+    "@nest-lab/throttler-storage-redis": "^1.1.0",
+    "@nestjs/apollo": "^13.2.1",
+    "@nestjs/bullmq": "^11.0.4",
+    "@nestjs/cache-manager": "^3.0.1",
+    "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.0.1",
+    "@nestjs/event-emitter": "^3.0.1",
+    "@nestjs/graphql": "^13.2.0",
+    "@nestjs/jwt": "^11.0.1",
+    "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/throttler": "^6.4.0",
+    "@sentry/nestjs": "^10.26.0",
+    "@sentry/opentelemetry": "^10.26.0",
+    "@sentry/profiling-node": "^10.26.0",
+    "@solana/web3.js": "^1.98.4",
+    "@types/passport-jwt": "^4.0.1",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
+    "bullmq": "^5.65.0",
+    "cache-manager": "^7.2.4",
+    "cacheable": "^2.1.1",
+    "class-validator": "^0.14.2",
+    "colyseus": "^0.16.5",
+    "colyseus.js": "^0.16.22",
+    "dayjs": "^1.11.19",
+    "decimal.js": "^10.6.0",
+    "ethers": "^6.15.0",
+    "graphql-type-json": "^0.3.2",
+    "ioredis": "^5.8.2",
+    "kafkajs": "^2.2.4",
+    "mongoose": "^8.19.3",
+    "nest-winston": "^1.10.2",
+    "nestjs-seeder": "^0.3.2",
+    "p-defer": "^4.0.1",
+    "p-retry": "^7.1.0",
+    "passport-custom": "^1.1.1",
+    "passport-jwt": "^4.0.1",
+    "puppeteer": "^24.29.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "redis": "^5.9.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "winston": "^3.18.3",
+    "winston-loki": "^6.1.3"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
+    "@nestjs/cli": "^11.0.0",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.1",
+    "@types/bn.js": "^5.2.0",
+    "@types/bs58": "^4.0.4",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^22.10.7",
+    "@types/supertest": "^6.0.2",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.2",
+    "globals": "^16.0.0",
+    "i": "^0.3.7",
+    "jest": "^30.0.0",
+    "npm": "^11.6.2",
+    "prettier": "^3.4.2",
+    "source-map-support": "^0.5.21",
+    "superjson": "^2.2.5",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "tweetnacl": "^1.0.3",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
     },
-    "dependencies": {
-        "@aptos-labs/ts-sdk": "^5.1.1",
-        "@as-integrations/express5": "^1.1.2",
-        "@colyseus/monitor": "^0.16.7",
-        "@colyseus/playground": "^0.16.4",
-        "@colyseus/schema": "^3.0.68",
-        "@keyv/redis": "^5.1.4",
-        "@mysten/sui": "^1.44.0",
-        "@nest-lab/throttler-storage-redis": "^1.1.0",
-        "@nestjs/apollo": "^13.2.1",
-        "@nestjs/cache-manager": "^3.0.1",
-        "@nestjs/common": "^11.0.1",
-        "@nestjs/config": "^4.0.2",
-        "@nestjs/core": "^11.0.1",
-        "@nestjs/event-emitter": "^3.0.1",
-        "@nestjs/graphql": "^13.2.0",
-        "@nestjs/jwt": "^11.0.1",
-        "@nestjs/mongoose": "^11.0.3",
-        "@nestjs/passport": "^11.0.5",
-        "@nestjs/platform-express": "^11.0.1",
-        "@nestjs/throttler": "^6.4.0",
-        "@sentry/nestjs": "^10.26.0",
-        "@sentry/opentelemetry": "^10.26.0",
-        "@sentry/profiling-node": "^10.26.0",
-        "@solana/web3.js": "^1.98.4",
-        "@types/passport-jwt": "^4.0.1",
-        "@willsoto/nestjs-prometheus": "^6.0.2",
-        "cache-manager": "^7.2.4",
-        "cacheable": "^2.1.1",
-        "class-validator": "^0.14.2",
-        "colyseus": "^0.16.5",
-        "colyseus.js": "^0.16.22",
-        "dayjs": "^1.11.19",
-        "decimal.js": "^10.6.0",
-        "ethers": "^6.15.0",
-        "graphql-type-json": "^0.3.2",
-        "ioredis": "^5.8.2",
-        "kafkajs": "^2.2.4",
-        "mongoose": "^8.19.3",
-        "nest-winston": "^1.10.2",
-        "nestjs-seeder": "^0.3.2",
-        "p-defer": "^4.0.1",
-        "p-retry": "^7.1.0",
-        "passport-custom": "^1.1.1",
-        "passport-jwt": "^4.0.1",
-        "puppeteer": "^24.29.1",
-        "puppeteer-extra": "^3.3.6",
-        "puppeteer-extra-plugin-stealth": "^2.11.2",
-        "redis": "^5.9.0",
-        "reflect-metadata": "^0.2.2",
-        "rxjs": "^7.8.1",
-        "winston": "^3.18.3",
-        "winston-loki": "^6.1.3"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3.2.0",
-        "@eslint/js": "^9.18.0",
-        "@nestjs/cli": "^11.0.0",
-        "@nestjs/schematics": "^11.0.0",
-        "@nestjs/testing": "^11.0.1",
-        "@types/bn.js": "^5.2.0",
-        "@types/bs58": "^4.0.4",
-        "@types/express": "^5.0.0",
-        "@types/jest": "^30.0.0",
-        "@types/node": "^22.10.7",
-        "@types/supertest": "^6.0.2",
-        "eslint": "^9.39.1",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-prettier": "^5.2.2",
-        "globals": "^16.0.0",
-        "i": "^0.3.7",
-        "jest": "^30.0.0",
-        "npm": "^11.6.2",
-        "prettier": "^3.4.2",
-        "source-map-support": "^0.5.21",
-        "superjson": "^2.2.5",
-        "supertest": "^7.0.0",
-        "ts-jest": "^29.2.5",
-        "ts-loader": "^9.5.2",
-        "ts-node": "^10.9.2",
-        "tsconfig-paths": "^4.2.0",
-        "tweetnacl": "^1.0.3",
-        "typescript": "^5.7.3",
-        "typescript-eslint": "^8.20.0"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": ".",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "./coverage",
-        "testEnvironment": "node",
-        "roots": [
-            "<rootDir>/apps/"
-        ]
-    }
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/apps/"
+    ]
+  }
 }
