--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,46 @@
 {
-    "compilerOptions": {
-        "module": "nodenext",
-        "useDefineForClassFields": false,
-        "moduleResolution": "nodenext",
-        "resolvePackageJsonExports": true,
-        "esModuleInterop": true,
-        "isolatedModules": false,
-        "declaration": true,
-        "removeComments": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "ES2023",
-        "sourceMap": true,
-        "outDir": "./dist",
-        "baseUrl": "./",
-        "incremental": true,
-        "skipLibCheck": true,
-        "strictNullChecks": true,
-        "forceConsistentCasingInFileNames": true,
-        "noImplicitAny": false,
-        "strictBindCallApply": false,
-        "noFallthroughCasesInSwitch": false,
-        "paths": {
-            "@apps/*": ["./apps/*"],
-            "@exceptions": ["./src/exceptions"],
-            "@modules/*": ["./src/modules/*"],
-            "@winston": ["./src/winston"],
-            "@typedefs": ["./src/typedefs"],
-            "@utils": ["./src/utils"]
-        }
+  "compilerOptions": {
+    "module": "nodenext",
+    "useDefineForClassFields": false,
+    "moduleResolution": "nodenext",
+    "resolvePackageJsonExports": true,
+    "esModuleInterop": true,
+    "isolatedModules": false,
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2023",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@apps/*": [
+        "./apps/*"
+      ],
+      "@exceptions": [
+        "./src/exceptions"
+      ],
+      "@modules/*": [
+        "./src/modules/*"
+      ],
+      "@typedefs": [
+        "./src/typedefs"
+      ],
+      "@utils": [
+        "./src/utils"
+      ],
+      "@winston": [
+        "./src/winston"
+      ]
     }
+  }
 }
