--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "dayjs": "^1.11.19",
         "decimal.js": "^10.6.0",
         "ethers": "^6.15.0",
+        "express-basic-auth": "^1.2.1",
         "graphql-type-json": "^0.3.2",
         "ioredis": "^5.8.2",
         "kafkajs": "^2.2.4",
