--- a/apps/nomas-colyseus/docker-compose.yml
+++ b/apps/nomas-colyseus/docker-compose.yml
@@ -41,4 +41,8 @@ services:
             - LOKI_HOST=${LOKI_HOST}
             - LOKI_USERNAME=${LOKI_USERNAME}
             - LOKI_PASSWORD=${LOKI_PASSWORD}
+            - GRAPHQL_ADMIN_USERNAME=${GRAPHQL_ADMIN_USERNAME}
+            - GRAPHQL_ADMIN_PASSWORD=${GRAPHQL_ADMIN_PASSWORD}
+            - COLYSEUS_ADMIN_USERNAME=${COLYSEUS_ADMIN_USERNAME}
+            - COLYSEUS_ADMIN_PASSWORD=${COLYSEUS_ADMIN_PASSWORD}
         restart: unless-stopped
