--- a/apps/nomas-colyseus/Dockerfile
+++ b/apps/nomas-colyseus/Dockerfile
@@ -1,56 +1,48 @@
-FROM node:23-alpine AS builder
+ARG NODE_VERSION=23.5.0
 
-#  Step 1: Builder
-WORKDIR /app
+# Step 1: Build (Build the application)
+FROM node:${NODE_VERSION}-alpine AS build
 
-# Copy package.json and package-lock.json from the root directory (important for npm ci)
-# This assumes the build context is the root directory of the repository.
-COPY package*.json ./
+WORKDIR /usr/src/app
 
-# Copy configuration files from root
-COPY nest-cli.json ./
-COPY tsconfig*.json ./
+# Copy package.json and package-lock.json from the root directory
+COPY package.json package-lock.json ./
 
-# Install all dependencies (including devDependencies for building)
-RUN npm ci
+# Install dependencies (using --force because this is a build environment)
+RUN npm ci --force
 
-# Copy the entire source code of the project
+# Copy the remaining source code
 COPY . .
 
 # Run the build command for the nomas-colyseus application
-ENV NODE_ENV=production
-RUN npm run build:prod:nomas-colyseus
+# The output will be in /usr/src/app/dist/apps/nomas-colyseus/
+RUN npx nest build nomas-colyseus
 
-# Step 2: Production (Final image, small and light)
-FROM node:23-alpine
+# Step 2: Production (Final image)
+FROM node:${NODE_VERSION}-alpine AS production
 
-WORKDIR /app
-
-# Copy package.json and package-lock.json (only for production deps)
-COPY package*.json ./
-
-# Install the dependencies for the production environment and the necessary packages
-RUN npm ci --only=production && \
-    npm install cross-env --save-prod && \
-    npm cache clean --force
-
-# Copy the built application (dist) from the builder step
-COPY --from=builder /app/dist ./dist
-
-# Create a non-root user (not root) to enhance security
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nodejs -u 1001 -G nodejs && \
-    chown -R nodejs:nodejs /app
-
-# Switch to the non-root user
-USER nodejs
-
-# Set the production environment
-ENV NODE_ENV=production
-
-# Open the port for the Colyseus application
+# Default ports for Colyseus (2567) and the API you defined (3002)
 EXPOSE 3002 2567
 
+WORKDIR /usr/src/app
 
-# Command to start the application
-CMD ["npm", "run", "start:prod:nomas-colyseus"]
+# Copy package.json and package-lock.json
+# Both are needed for npm install --production to work correctly
+COPY --from=build /usr/src/app/package.json ./
+COPY --from=build /usr/src/app/package-lock.json ./
+
+# Install only the production dependencies
+# Set the destination directory to /usr/src/app (current WORKDIR)
+RUN npm ci 
+
+# Copy the build output from the builder
+# Copy the build output from the builder to the current working directory (/)
+COPY --from=build /usr/src/app/dist/apps/nomas-colyseus ./
+
+# Run as a non-root user
+# Use the default 'node' user of the Node-Alpine image
+USER node
+
+# Command to start the built application
+# NestJS will create a startup file (usually main.js) after building
+CMD ["node", "main.js"]
