--- a/.github/workflows/deploy-colyseus.yml
+++ b/.github/workflows/deploy-colyseus.yml
@@ -28,44 +28,102 @@ jobs:
                   NODE_ENV: ${{ vars.NODE_ENV }}
                   PORT: ${{ vars.PORT }}
                   COLYSEUS_PORT: ${{ vars.COLYSEUS_PORT }}
+
+                  # MongoDB Configuration
                   MONGODB_GAME_HOST: ${{ vars.MONGODB_GAME_HOST }}
                   MONGODB_GAME_PORT: ${{ vars.MONGODB_GAME_PORT }}
                   MONGODB_GAME_DATABASE: ${{ vars.MONGODB_GAME_DATABASE }}
+
+                  # Redis Colyseus Configuration
+                  REDIS_COLYSEUS_HOST: ${{ vars.REDIS_COLYSEUS_HOST }}
                   REDIS_COLYSEUS_PORT: ${{ vars.REDIS_COLYSEUS_PORT }}
                   REDIS_COLYSEUS_REQUIRE_PASSWORD: ${{ vars.REDIS_COLYSEUS_REQUIRE_PASSWORD }}
+
+                  # Redis Throttler Configuration
+                  REDIS_THROTTLER_HOST: ${{ vars.REDIS_THROTTLER_HOST }}
                   REDIS_THROTTLER_PORT: ${{ vars.REDIS_THROTTLER_PORT }}
                   REDIS_THROTTLER_REQUIRE_PASSWORD: ${{ vars.REDIS_THROTTLER_REQUIRE_PASSWORD }}
+
+                  # Redis Cache Configuration
+                  REDIS_CACHE_HOST: ${{ vars.REDIS_CACHE_HOST }}
                   REDIS_CACHE_PORT: ${{ vars.REDIS_CACHE_PORT }}
                   REDIS_CACHE_REQUIRE_PASSWORD: ${{ vars.REDIS_CACHE_REQUIRE_PASSWORD }}
+                  REDIS_CACHE_TTL: ${{ vars.REDIS_CACHE_TTL }}
+
+                  # Auth & JWT Configuration
+                  AUTH_SIGNATURE_DURATION: ${{ vars.AUTH_SIGNATURE_DURATION }}
                   JWT_REFRESH_TOKEN_EXPIRATION: ${{ vars.JWT_REFRESH_TOKEN_EXPIRATION }}
                   JWT_ACCESS_TOKEN_EXPIRATION: ${{ vars.JWT_ACCESS_TOKEN_EXPIRATION }}
-                  SENTRY_TRACES_SAMPLE_RATE: ${{ vars.SENTRY_TRACES_SAMPLE_RATE }}
+
+                  # Loki Configuration
                   LOKI_HOST: ${{ vars.LOKI_HOST }}
-                  REDIS_COLYSEUS_HOST: ${{ vars.REDIS_COLYSEUS_HOST }}
-                  REDIS_THROTTLER_HOST: ${{ vars.REDIS_THROTTLER_HOST }}
-                  REDIS_CACHE_HOST: ${{ vars.REDIS_CACHE_HOST }}
+                  LOKI_REQUIRE_AUTH: ${{ vars.LOKI_REQUIRE_AUTH }}
+
+                  # Kafka Configuration
+                  KAFKA_HOST: ${{ vars.KAFKA_HOST }}
+                  KAFKA_PORT: ${{ vars.KAFKA_PORT }}
+                  KAFKA_CLIENT_ID: ${{ vars.KAFKA_CLIENT_ID }}
+                  KAFKA_SASL_MECHANISM: ${{ secrets.KAFKA_SASL_MECHANISM }}
+                  KAFKA_SASL_ENABLED: ${{ vars.KAFKA_SASL_ENABLED }}
+
+                  # BullMQ Configuration
+                  BULLMQ_COMPLETED_JOB_COUNT: ${{ vars.BULLMQ_COMPLETED_JOB_COUNT }}
+                  BULLMQ_FAILED_JOB_COUNT: ${{ vars.BULLMQ_FAILED_JOB_COUNT }}
 
                   # ====== Sensitive config (Secrets) ======
+                  # MongoDB Secrets
                   MONGODB_GAME_USERNAME: ${{ secrets.MONGODB_GAME_USERNAME }}
                   MONGODB_GAME_PASSWORD: ${{ secrets.MONGODB_GAME_PASSWORD }}
+
+                  # Redis Colyseus Secrets
                   REDIS_COLYSEUS_USERNAME: ${{ secrets.REDIS_COLYSEUS_USERNAME }}
                   REDIS_COLYSEUS_PASSWORD: ${{ secrets.REDIS_COLYSEUS_PASSWORD }}
+
+                  # Redis Throttler Secrets
                   REDIS_THROTTLER_USERNAME: ${{ secrets.REDIS_THROTTLER_USERNAME }}
                   REDIS_THROTTLER_PASSWORD: ${{ secrets.REDIS_THROTTLER_PASSWORD }}
+
+                  # Redis Cache Secrets
                   REDIS_CACHE_USERNAME: ${{ secrets.REDIS_CACHE_USERNAME }}
                   REDIS_CACHE_PASSWORD: ${{ secrets.REDIS_CACHE_PASSWORD }}
+
+                  # Auth & JWT Secrets
                   JWT_SECRET: ${{ secrets.JWT_SECRET }}
-                  SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-                  LOKI_USERNAME: ${{ secrets.LOKI_USERNAME }}
-                  LOKI_PASSWORD: ${{ secrets.LOKI_PASSWORD }}
-                  GRAPHQL_ADMIN_USERNAME: ${{ secrets.GRAPHQL_ADMIN_USERNAME }}
-                  GRAPHQL_ADMIN_PASSWORD: ${{ secrets.GRAPHQL_ADMIN_PASSWORD }}
+
+                  # Admin Credentials
                   COLYSEUS_ADMIN_USERNAME: ${{ secrets.COLYSEUS_ADMIN_USERNAME }}
                   COLYSEUS_ADMIN_PASSWORD: ${{ secrets.COLYSEUS_ADMIN_PASSWORD }}
+                  GRAPHQL_ADMIN_USERNAME: ${{ secrets.GRAPHQL_ADMIN_USERNAME }}
+                  GRAPHQL_ADMIN_PASSWORD: ${{ secrets.GRAPHQL_ADMIN_PASSWORD }}
+
+                  # Kafka Secrets
+                  KAFKA_SASL_USERNAME: ${{ secrets.KAFKA_SASL_USERNAME }}
+                  KAFKA_SASL_PASSWORD: ${{ secrets.KAFKA_SASL_PASSWORD }}
+
+                  # Loki Secrets
+                  LOKI_USERNAME: ${{ secrets.LOKI_USERNAME }}
+                  LOKI_PASSWORD: ${{ secrets.LOKI_PASSWORD }}
+
+                  # Sentry Secrets
+                  SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+
+                  # Mock Private Keys (should be secrets for security)
+                  MOCK_PRIVATE_KEY_EVM: ${{ secrets.MOCK_PRIVATE_KEY_EVM }}
+                  MOCK_PRIVATE_KEY_SOLANA: ${{ secrets.MOCK_PRIVATE_KEY_SOLANA }}
+                  MOCK_PRIVATE_KEY_SUI: ${{ secrets.MOCK_PRIVATE_KEY_SUI }}
+                  MOCK_PRIVATE_KEY_APTOS: ${{ secrets.MOCK_PRIVATE_KEY_APTOS }}
               run: |
                   cd apps/nomas-colyseus
                   docker compose down --remove-orphans
                   docker compose up -d --build
 
-            - name: List running containers
-              run: docker ps
+            - name: Check service status
+              run: |
+                  cd apps/nomas-colyseus
+                  docker compose ps
+
+            - name: View logs if failed
+              if: failure()
+              run: |
+                  cd apps/nomas-colyseus
+                  docker compose logs --tail=100
