chore(docker): add external network configuration for nomas-network in docker-compose.yml

--- a/apps/nomas-colyseus/docker-compose.yml
+++ b/apps/nomas-colyseus/docker-compose.yml
@@ -44,3 +44,6 @@ services:
             - COLYSEUS_ADMIN_USERNAME=${COLYSEUS_ADMIN_USERNAME}
             - COLYSEUS_ADMIN_PASSWORD=${COLYSEUS_ADMIN_PASSWORD}
         restart: unless-stopped
+networks:
+    nomas-network:
+        external: true
