--- a/apps/nomas-colyseus/docker-compose.yml
+++ b/apps/nomas-colyseus/docker-compose.yml
@@ -43,6 +43,12 @@ services:
             - GRAPHQL_ADMIN_PASSWORD=${GRAPHQL_ADMIN_PASSWORD}
             - COLYSEUS_ADMIN_USERNAME=${COLYSEUS_ADMIN_USERNAME}
             - COLYSEUS_ADMIN_PASSWORD=${COLYSEUS_ADMIN_PASSWORD}
+            - KAFKA_HOST=${KAFKA_HOST}
+            - KAFKA_PORT=${KAFKA_PORT}
+            - KAFKA_SASL_USERNAME=${KAFKA_SASL_USERNAME}
+            - KAFKA_SASL_PASSWORD=${KAFKA_SASL_PASSWORD}
+            - KAFKA_SASL_MECHANISM=${KAFKA_SASL_MECHANISM}
+            - KAFKA_SASL_ENABLED=${KAFKA_SASL_ENABLED}
         restart: unless-stopped
 networks:
     nomas-network:
