chore(docker): add nomas-network to Kafka service in docker-compose for improved service isolation

--- a/apps/nomas-colyseus/docker-compose.yml
+++ b/apps/nomas-colyseus/docker-compose.yml
@@ -50,6 +50,8 @@ services:
             - KAFKA_SASL_MECHANISM=${KAFKA_SASL_MECHANISM}
             - KAFKA_SASL_ENABLED=${KAFKA_SASL_ENABLED}
         restart: unless-stopped
+        networks:
+            - nomas-network
 networks:
     nomas-network:
         external: true
